fix(tabs): fixes flicker issue with dynamic height

--- a/src/components/tabs/tabs.scss
+++ b/src/components/tabs/tabs.scss
@@ -24,7 +24,7 @@ md-tabs {
   overflow: hidden;
   position: relative;
   transition: height $swift-ease-in-out-duration $swift-ease-in-out-timing-function;
-  &:not(.md-no-tab-content) {
+  &:not(.md-no-tab-content):not([md-dynamic-height]) {
     min-height: 200 + $tabs-header-height;
   }
   &[md-align-tabs="bottom"] {
@@ -35,11 +35,11 @@ md-tabs {
     md-tabs-content-wrapper {
       min-height: 0;
       position: relative;
-      top: 0; left: 0; right: 0; bottom: 0;
+      top: auto; left: auto; right: auto; bottom: auto;
       overflow: visible;
     }
     md-tab-content {
-      &:not(.md-left):not(.md-right):not(.ng-animate) {
+      &.md-active {
         position: relative;
       }
     }
@@ -57,6 +57,9 @@ md-tabs {
     md-tabs-wrapper {
       border-width: 0 0 1px;
       border-style: solid;
+      .md-tab {
+        padding-bottom: 11px;
+      }
     }
   }
 }
